--- a/_config.yml
+++ b/_config.yml
@@ -232,13 +232,13 @@ kramdown:
 # Default YAML values (more information on Jekyll's site)
 defaults:
 #  -
-#    scope:
-#      path: ""
-#      type: "posts"
-#    values:
-#      layout: "post"
-#      comments: true  # add comments to all blog posts
-#      social-share: true # add social media sharing buttons to all blog posts
+    scope:
+      path: ""
+      type: "posts"
+    values:
+      layout: "post"
+      comments: true  # add comments to all blog posts
+      social-share: true # add social media sharing buttons to all blog posts
   -
     scope:
       path: "" # any file that's not a post will be a "page" layout by default
