Removed broken home page link added resume to nav bar

--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,7 @@ author: Sawyer Huang
 navbar-links:
   About Me: "aboutme"
   Projects: "projects"
+  Resume: "/Sawyer Huang Resume Spring 22.pdf"
   Links:
     - GitHub: "https://github.com/sawhuang"
     - LinkedIn: "https://www.linkedin.com/in/sawyerhuang/"
